# annotatia

./: LICENSE  PKGBUILD  README.md  SUMMARY.md  pyproject.toml
.opencode/plans/: ANNOTATE_PLAN.md
src/: annotate.py
